fixing task creation dates not showing properly

--- a/react-front-end/src/styles/TasksListComponent.scss
+++ b/react-front-end/src/styles/TasksListComponent.scss
@@ -5,7 +5,7 @@
   button {
     margin-top: 10px;
   }
-  .MuiDataGrid-columnHeader {
-    font-weight: bold;
+  .MuiTableCell-head {
+    font-weight: 550;
   }
 }
